fix: repair font-weight of timeline point description's parargaph

--- a/src/pages/AboutUsPage/HowWeGetThingsDone/components/styles/ProductCreationAxis.css
+++ b/src/pages/AboutUsPage/HowWeGetThingsDone/components/styles/ProductCreationAxis.css
@@ -132,7 +132,7 @@
 
 .timeLinePointDescription p {
     font-family: var(--nunito-sans);
-    font-weight: 600;
+    font-weight: var(--semi-medium);
     font-size: 18px;
     text-align: center;
 
